--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,25 +4,29 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <meta-data android:name="com.inthecheesefactory.lab.glidepicasso.GlideConfiguration"
-        android:value="GlideModule"/>
+    <meta-data
+        android:name="com.inthecheesefactory.lab.glidepicasso.GlideConfiguration"
+        android:value="GlideModule" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+                android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.SignUpActivity">
+
+        </activity>
+        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.ProfileActivity"></activity>
+        <activity android:name=".activities.BannerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LoginActivity" />
-        <activity android:name=".activities.ProfileActivity"></activity>
     </application>
 
 </manifest>
